--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "mockery/mockery": "~1.4.1",
-        "phpunit/phpunit": "~9.5|~10.0"
+        "phpunit/phpunit": "~9.5|~10.0|~11.0"
     },
     "autoload": {
         "psr-4": {
